# Stop-Hunt-Strategy

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_SOURCES_REVIEW.md
notebooks/: 01_data_exploration.ipynb
scripts/: fetch_cmc_ohlcv.py
src/stop_hunt_strategy/: __init__.py  core.py
src/stop_hunt_strategy/data/: __init__.py  cmc_ohlcv.py
tests/unit/: test_cmc_ohlcv.py
