[project]
name = "stop-hunt-strategy"
version = "0.1.0"
description = "Crypto strategy research and backtesting framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.6.0",
  "matplotlib>=3.8.0",
  "requests>=2.31.0",
  "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
